src/objects/BT_CO_ARMS_CreateCustAccountFile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Debt_Exposure_Amount__c</fullName>
        <label>Approved Debt Exposure Amount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_House_Number__c</fullName>
        <label>Block House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Secondary__c</fullName>
        <label>Building Secondary</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Profile__c</fullName>
        <label>Business Profile</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Sector__c</fullName>
        <label>Business Sector</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Zip__c</fullName>
        <label>City Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Attention_To_Indicator__c</fullName>
        <label>Co Attention To Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Id__c</fullName>
        <label>Create Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_External__c</fullName>
        <label>Credit Limit External</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Internal__c</fullName>
        <label>Credit Limit Internal</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Term_Reference__c</fullName>
        <label>Credit Term Reference</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Term__c</fullName>
        <label>Credit Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name1__c</fullName>
        <label>Customer Name1</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name2__c</fullName>
        <label>Customer Name2</label>
        <length>49</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Mgt_Treatment__c</fullName>
        <label>Debt Mgt Treatment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <label>Floor Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_OutOfScope_Indicator__c</fullName>
        <label>GST OutOfScope Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_No__c</fullName>
        <label>ID No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <label>ID Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_No__c</fullName>
        <label>PO Box No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Country_Code__c</fullName>
        <label>Passport Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>valid values &apos;Master&apos; or &apos;Detail&apos; only</description>
        <inlineHelpText>valid values &apos;Master&apos; or &apos;Detail&apos; only</inlineHelpText>
        <label>Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Key__c</fullName>
        <label>Reference Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieve_Account_Indicator__c</fullName>
        <label>Retrieve Account Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Group__c</fullName>
        <label>SOA Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Supression_Indicator__c</fullName>
        <label>SOA Supression Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Staff_Indicator__c</fullName>
        <label>SPH Staff Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sort Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;new&apos;</defaultValue>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_ContactNo_Email__c</fullName>
        <label>Sub ContactNo Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contact_Designation__c</fullName>
        <label>Sub Contact Designation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contact_Ext__c</fullName>
        <label>Sub Contact Ext</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contact_Name__c</fullName>
        <label>Sub Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Contact_Type__c</fullName>
        <label>Sub Contact Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transient_Indicator__c</fullName>
        <label>Transient Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <label>Unit No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>co_Attention_To_Party__c</fullName>
        <label>co Attention To Party</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_CreateCustAccountFile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name1__c</columns>
        <columns>Record_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BT_CO_ARMS_CreateCustAccountMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_CreateCustAccountFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>